tests/golden/errors/uncaught_overflow_error.py
x = 10 ** 400
f = float(x)
